--- a/remix-solidity/package.json
+++ b/remix-solidity/package.json
@@ -2,6 +2,8 @@
   "name": "remix-solidity",
   "version": "0.3.21",
   "description": "Ethereum IDE and tools for the web",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "contributors": [
     {
       "name": "Yann Levreau",
@@ -12,7 +14,6 @@
       "email": "liana@ethdev.com"
     }
   ],
-  "main": "./index.js",
   "dependencies": {
     "eslint-scope": "^5.0.0",
     "remix-lib": "0.4.18",
@@ -26,19 +27,21 @@
     "@babel/preset-es2015": "latest",
     "@babel/preset-es2017": "latest",
     "@babel/preset-stage-0": "^7.0.0",
+    "@types/node": "^13.1.1",
     "babel-eslint": "^10.0.0",
     "babelify": "^10.0.0",
     "standard": "^7.0.1",
-    "tape": "^4.6.0"
+    "tape": "^4.6.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
-    "test": "standard && tape ./test/tests.js"
+    "build": "tsc",
+    "test": "tsc && tape ./test/tests.js"
   },
   "standard": {
     "ignore": [
       "node_modules/*"
-    ],
-    "parser": "babel-eslint"
+    ]
   },
   "repository": {
     "type": "git",
