build ts packages before publishing

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "diff": "lerna diff",
     "updated": "lerna updated",
     "bootstrap": "lerna bootstrap",
-    "publish": "lerna publish",
+    "build-ts-packages": "lerna run --scope 'remix-solidity' --scope 'remix-tests' --scope 'remix-url-resolver' --scope 'remix-astwalker' build",
+    "publish": "npm run build-ts-packages; lerna publish",
     "release": "lerna bootstrap; lerna publish;",
     "tag": "gulp; gulp publishTag;",
     "updateChangelog": "gulp; gulp updateChangelog --prev $previousVersion;",
