--- a/remix-analyzer/package.json
+++ b/remix-analyzer/package.json
@@ -2,7 +2,8 @@
   "name": "remix-analyzer",
   "version": "0.3.23",
   "description": "Remix Analyzer",
-  "main": "./index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "contributors": [
     {
       "name": "Alex Beregszaszi",
@@ -18,9 +19,11 @@
     }
   ],
   "dependencies": {
+    "remix-astwalker": "0.0.19",
     "remix-lib": "0.4.22"
   },
   "scripts": {
+    "build": "tsc",
     "lint": "standard",
     "test": "npm run lint && tape ./test/tests.js"
   },
@@ -34,11 +37,13 @@
   "license": "MIT",
   "homepage": "https://github.com/ethereum/remix#readme",
   "devDependencies": {
+    "@types/node": "^13.7.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
     "npm-install-version": "^6.0.2",
     "standard": "^7.0.1",
-    "tape": "^4.6.0"
+    "tape": "^4.6.0",
+    "typescript": "^3.7.5"
   }
 }
