--- a/remix-analyzer/package.json
+++ b/remix-analyzer/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "standard",
-    "test": "tsc && npm run lint && tape ./test/tests.js"
+    "test": "tsc && npm run lint && ts-node node_modules/tape/bin/tape ./test/tests.ts"
   },
   "standard": {
     "ignore": [
