Nightwatch config for running tests in parallel
Added drivers path for chrome and firefox

Changed firefox port

Installed geckodriver

Changed firefox config

cli_args config

Fixed linting error

Modified config

Revert nightwatch config

Fixed linting error

Set drivers path

Fixed linting error

point driver path to new location

Set marionette to false

Removed cli_args option

Set parallel command in ci

Retry firefox in pipeline

Retry firefox in ci pipeline

Remove cli_args from nightwatch config

Retry ci pipeline

Load gecko in circleci

Debug circleci

Debug circleci

Retry pipeline

Retry pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Retry pipeline

Retry pipeline

Retry pipeline

Retry pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Debug pipeline

Changed CI selenium-server-standalone to selenium-standalone

Fixed linting error

Set marionette to false

Add download of old firefox to ci build

Set marionette to true

Set permission

Rearranged steps

Fix ci error

Remove gecko driver

Use node_modules selenium standalone

Change build steps

Change firefox version

Update firefox version

Renamed firefox start step

Test yml changes

Test yml changes

Test yml changes

Test yml changes

Setup workflows for running firefox and chrome tests in parallel

Setup workflows for running firefox and chrome tests in parallel

Setup workflows for running firefox and chrome tests in parallel

Setup workflows for running firefox and chrome tests in parallel

Use selenium-standalone

Use selenium-standalone

Set selenium-server version

Added selenium config

Fixed liniting error

Fixed Build error path

Fixed Selenium config error path

Changed selenium server version

Test for chrome

Added config for chrome

Test firefox and chrome in parallel

Add firefox config to seleniumConfig

Downgrade firefox driver version

Download firefox browser

Test c

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,11 +25,17 @@ jobs:
       - run: npm run lint && npm run test && npm run make-mock-compiler
       - run:
           name: Download Selenium
-          command: wget http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
+          command: ./node_modules/.bin/selenium-standalone install --config=../remix-ide/seleniumConfig.js
       - run:
           name: Start Selenium
-          command: java -jar selenium-server-standalone-3.5.3.jar
+          command: ./node_modules/.bin/selenium-standalone start --config=../remix-ide/seleniumConfig.js
           background: true
+      - run:
+          name: Download Latest Firefox
+          command: sudo apt-get purge -y firefox && wget https://sourceforge.net/projects/ubuntuzilla/files/mozilla/apt/pool/main/f/firefox-mozilla-build/firefox-mozilla-build_73.0.1-0ubuntu1_amd64.deb
+      - run:
+          name: Install Firefox
+          command: sudo dpkg -i firefox-mozilla-build_73.0.1-0ubuntu1_amd64.deb
       - run: ./ci/browser_tests.sh
       - run: 
           name: Deploy
