--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "remixd": "0.1.8-alpha.10",
     "request": "^2.83.0",
     "rimraf": "^2.6.1",
-    "selenium-standalone": "^6.0.1",
+    "selenium-standalone": "^6.17.0",
     "semver": "^6.1.2",
     "solc": "^0.6.0",
     "swarmgw": "^0.3.1",
@@ -162,6 +162,7 @@
     "lint": "standard | notify-error",
     "make-mock-compiler": "node ci/makeMockCompiler.js",
     "minify": "uglifyjs --in-source-map inline --source-map-inline -c warnings=false",
+    "nightwatch_parallel": "nightwatch -e chrome,firefox --config nightwatch.js",
     "nightwatch_local_firefox": "nightwatch --config nightwatch.js --env firefox",
     "nightwatch_local_chrome": "nightwatch --config nightwatch.js --env chrome",
     "nightwatch_local_ballot": "nightwatch ./test-browser/tests/ballot.js --config nightwatch.js --env chrome ",
