Fixed invalid circleci step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "remix_live" ]; then
               ./ci/deploy_from_travis_remix-live.sh;
             fi 
-      - store_artifact:
+      - store_artifacts:
           path: ./test-browser/screenshots
 
 workflows:
