--- a/remix-analyzer/package.json
+++ b/remix-analyzer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remix-analyzer",
-  "version": "0.4.0",
+  "version": "0.5.0-beta.1",
   "description": "Remix Analyzer",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -19,8 +19,8 @@
     }
   ],
   "dependencies": {
-    "remix-astwalker": "0.0.20",
-    "remix-lib": "0.4.23"
+    "remix-astwalker": "0.0.21",
+    "remix-lib": "0.4.24"
   },
   "scripts": {
     "build": "tsc",
