--- a/package.json
+++ b/package.json
@@ -55,13 +55,13 @@
     "npm-merge-driver": "^2.3.5",
     "npm-run-all": "^4.0.2",
     "onchange": "^3.2.1",
-    "remix-analyzer": "0.3.23",
-    "remix-debug": "0.3.27",
-    "remix-lib": "0.4.23",
-    "remix-solidity": "0.3.26",
+    "remix-analyzer": "0.5.0-beta.1",
+    "remix-debug": "0.3.28",
+    "remix-lib": "0.4.24",
+    "remix-solidity": "0.3.27",
     "remix-tabs": "1.0.48",
-    "remix-tests": "0.1.29",
-    "remix-simulator": "0.1.9-beta.1",
+    "remix-tests": "0.1.30",
+    "remix-simulator": "0.1.9-beta.2",
     "remixd": "0.1.8-alpha.10",
     "request": "^2.83.0",
     "rimraf": "^2.6.1",
