--- a/remix-analyzer/package.json
+++ b/remix-analyzer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "remix-analyzer",
   "version": "0.5.0-beta.2",
-  "description": "Remix Analyzer",
+  "description": "Tool to perform static analysis on Solidity smart contracts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "contributors": [
@@ -36,7 +36,7 @@
   },
   "author": "Remix Team",
   "license": "MIT",
-  "homepage": "https://github.com/ethereum/remix#readme",
+  "homepage": "https://github.com/ethereum/remix/tree/master/remix-analyzer#readme",
   "devDependencies": {
     "@types/node": "^13.7.0",
     "babel-eslint": "^7.1.1",
