--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "npm-run-all": "^4.0.2",
     "onchange": "^3.2.1",
     "remix-analyzer": "0.5.0",
-    "remix-debug": "0.4.0",
-    "remix-lib": "0.4.25",
+    "remix-debug": "0.4.1",
+    "remix-lib": "^0.4.26",
     "remix-simulator": "0.1.9-beta.3",
     "remix-solidity": "0.3.28",
     "remix-tabs": "1.0.48",
