--- a/package.json
+++ b/package.json
@@ -55,13 +55,13 @@
     "npm-merge-driver": "^2.3.5",
     "npm-run-all": "^4.0.2",
     "onchange": "^3.2.1",
-    "remix-analyzer": "0.5.0",
-    "remix-debug": "0.4.1-dev2742",
-    "remix-lib": "^0.4.25",
-    "remix-simulator": "0.1.9-beta.3",
-    "remix-solidity": "0.3.28",
+    "remix-analyzer": "0.5.2",
+    "remix-debug": "0.4.4",
+    "remix-lib": "0.4.29",
+    "remix-simulator": "0.1.9-beta.5",
+    "remix-solidity": "0.3.30",
     "remix-tabs": "1.0.48",
-    "remix-tests": "0.1.31",
+    "remix-tests": "0.1.33",
     "remixd": "0.1.8-alpha.10",
     "request": "^2.83.0",
     "rimraf": "^2.6.1",
