Removed test commands for firefox and added nightwatch command

--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "lint": "standard | notify-error",
     "make-mock-compiler": "node ci/makeMockCompiler.js",
     "minify": "uglifyjs --in-source-map inline --source-map-inline -c warnings=false",
+    "nightwatch": "nightwatch --config nightwatch.js --env chrome",
     "nightwatch_parallel": "nightwatch -e chrome,firefox --config nightwatch.js",
     "nightwatch_local_firefox": "nightwatch --config nightwatch.js --env firefox",
     "nightwatch_local_chrome": "nightwatch --config nightwatch.js --env chrome",
@@ -185,26 +186,7 @@
     "nightwatch_local_fileExplorer": "nightwatch ./test-browser/tests/fileExplorer.js --config nightwatch.js --env chrome ",
     "nightwatch_local_debugger": "nightwatch ./test-browser/tests/debugger.js --config nightwatch.js --env chrome ",
     "nightwatch_local_editor": "nightwatch ./test-browser/tests/editor.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_ballot_firefox": "nightwatch ./test-browser/tests/ballot.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_libraryDeployment_firefox": "nightwatch ./test-browser/tests/libraryDeployment.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_solidityImport_firefox": "nightwatch ./test-browser/tests/solidityImport.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_recorder_firefox": "nightwatch ./test-browser/tests/recorder.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_transactionExecution_firefox": "nightwatch ./test-browser/tests/transactionExecution.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_staticAnalysis_firefox": "nightwatch ./test-browser/tests/staticAnalysis.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_signingMessage_firefox": "nightwatch ./test-browser/tests/signingMessage.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_specialFunctions_firefox": "nightwatch ./test-browser/tests/specialFunctions.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_solidityUnitTests_firefox": "nightwatch ./test-browser/tests/solidityUnittests.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_remixd_firefox": "nightwatch ./test-browser/tests/remixd.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_terminal_firefox": "nightwatch ./test-browser/tests/terminal.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_gist_firefox": "nightwatch ./test-browser/tests/gist.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_workspace_firefox": "nightwatch ./test-browser/tests/workspace.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_defaultLayout_firefox": "nightwatch ./test-browser/tests/defaultLayout.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_pluginManager_firefox": "nightwatch ./test-browser/tests/pluginManager.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_publishContract_firefox": "nightwatch ./test-browser/tests/publishContract.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_generalSettings_firefox": "nightwatch ./test-browser/tests/generalSettings.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_fileExplorer_firefox": "nightwatch ./test-browser/tests/fileExplorer.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_debugger_firefox": "nightwatch ./test-browser/tests/debugger.js --config nightwatch.js --env firefox ",
-    "nightwatch_local_editor_firefox": "nightwatch ./test-browser/tests/editor.js --config nightwatch.js --env firefox ",
+    
     "nightwatch_local_runAndDeploy": "nightwatch ./test-browser/tests/runAndDeploy.js --config nightwatch.js --env chrome-runAndDeploy ",
     "onchange": "onchange build/app.js -- npm-run-all lint",
     "prepublish": "mkdirp build; npm-run-all -ls downloadsolc_root build",
