Renamed test files and updated package.json

--- a/package.json
+++ b/package.json
@@ -166,26 +166,26 @@
     "nightwatch_parallel": "nightwatch -e chrome,firefox --config nightwatch.js",
     "nightwatch_local_firefox": "nightwatch --config nightwatch.js --env firefox",
     "nightwatch_local_chrome": "nightwatch --config nightwatch.js --env chrome",
-    "nightwatch_local_ballot": "nightwatch ./test-browser/tests/ballot.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_libraryDeployment": "nightwatch ./test-browser/tests/libraryDeployment.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_solidityImport": "nightwatch ./test-browser/tests/solidityImport.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_recorder": "nightwatch ./test-browser/tests/recorder.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_transactionExecution": "nightwatch ./test-browser/tests/transactionExecution.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_staticAnalysis": "nightwatch ./test-browser/tests/staticAnalysis.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_signingMessage": "nightwatch ./test-browser/tests/signingMessage.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_specialFunctions": "nightwatch ./test-browser/tests/specialFunctions.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_solidityUnitTests": "nightwatch ./test-browser/tests/solidityUnittests.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_remixd": "nightwatch ./test-browser/tests/remixd.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_terminal": "nightwatch ./test-browser/tests/terminal.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_gist": "nightwatch ./test-browser/tests/gist.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_workspace": "nightwatch ./test-browser/tests/workspace.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_defaultLayout": "nightwatch ./test-browser/tests/defaultLayout.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_pluginManager": "nightwatch ./test-browser/tests/pluginManager.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_publishContract": "nightwatch ./test-browser/tests/publishContract.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_generalSettings": "nightwatch ./test-browser/tests/generalSettings.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_fileExplorer": "nightwatch ./test-browser/tests/fileExplorer.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_debugger": "nightwatch ./test-browser/tests/debugger.js --config nightwatch.js --env chrome ",
-    "nightwatch_local_editor": "nightwatch ./test-browser/tests/editor.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_ballot": "nightwatch ./test-browser/tests/ballot.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_libraryDeployment": "nightwatch ./test-browser/tests/libraryDeployment.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_solidityImport": "nightwatch ./test-browser/tests/solidityImport.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_recorder": "nightwatch ./test-browser/tests/recorder.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_transactionExecution": "nightwatch ./test-browser/tests/transactionExecution.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_staticAnalysis": "nightwatch ./test-browser/tests/staticAnalysis.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_signingMessage": "nightwatch ./test-browser/tests/signingMessage.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_specialFunctions": "nightwatch ./test-browser/tests/specialFunctions.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_solidityUnitTests": "nightwatch ./test-browser/tests/solidityUnittests.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_remixd": "nightwatch ./test-browser/tests/remixd.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_terminal": "nightwatch ./test-browser/tests/terminal.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_gist": "nightwatch ./test-browser/tests/gist.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_workspace": "nightwatch ./test-browser/tests/workspace.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_defaultLayout": "nightwatch ./test-browser/tests/defaultLayout.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_pluginManager": "nightwatch ./test-browser/tests/pluginManager.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_publishContract": "nightwatch ./test-browser/tests/publishContract.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_generalSettings": "nightwatch ./test-browser/tests/generalSettings.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_fileExplorer": "nightwatch ./test-browser/tests/fileExplorer.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_debugger": "nightwatch ./test-browser/tests/debugger.test.js --config nightwatch.js --env chrome ",
+    "nightwatch_local_editor": "nightwatch ./test-browser/tests/editor.test.js --config nightwatch.js --env chrome ",
     
     "nightwatch_local_runAndDeploy": "nightwatch ./test-browser/tests/runAndDeploy.js --config nightwatch.js --env chrome-runAndDeploy ",
     "onchange": "onchange build/app.js -- npm-run-all lint",
