--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,8 @@ jobs:
           command: ./node_modules/.bin/selenium-standalone start --config=../remix-ide/seleniumConfig.js
           background: true
       - run: ./ci/browser_tests_chrome.sh
+      - store_test_results:
+          path: ./reports/test_results
       - store_artifacts:
           path: ./reports/screenshots
 
@@ -71,6 +73,8 @@ jobs:
           name: Install Firefox
           command: sudo dpkg -i firefox-mozilla-build_73.0.1-0ubuntu1_amd64.deb
       - run: ./ci/browser_tests_firefox.sh
+      - store_test_results:
+          path: ./reports/test_results
       - store_artifacts:
           path: ./reports/screenshots
 
