--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
           command: ./node_modules/.bin/selenium-standalone start --config=../remix-ide/seleniumConfig.js
           background: true
       - run: ./ci/browser_tests_chrome.sh
+      - run:
+          name: Setup Directory For Test Results
+          command: mkdir -p ./reports/test_results/chrome
       - store_test_results:
           path: ./reports/test_results/chrome
       - store_artifacts:
@@ -73,6 +76,9 @@ jobs:
           name: Install Firefox
           command: sudo dpkg -i firefox-mozilla-build_73.0.1-0ubuntu1_amd64.deb
       - run: ./ci/browser_tests_firefox.sh
+      - run:
+          name: Setup Directory For Test Results
+          command: mkdir -p ./reports/test_results/chrome
       - store_test_results:
           path: ./reports/test_results/firefox
       - store_artifacts:
