Changed nightwatch reports directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,12 +32,9 @@ jobs:
           name: Start Selenium
           command: ./node_modules/.bin/selenium-standalone start --config=../remix-ide/seleniumConfig.js
           background: true
-      - run:
-          name: Setup Directory For Saving Test Results
-          command: mkdir -p ./reports/test_results/chrome
       - run: ./ci/browser_tests_chrome.sh
       - store_test_results:
-          path: ./reports/test_results/chrome
+          path: ./reports/tests
       - store_artifacts:
           path: ./reports/screenshots
 
@@ -75,12 +72,9 @@ jobs:
       - run:
           name: Install Firefox
           command: sudo dpkg -i firefox-mozilla-build_73.0.1-0ubuntu1_amd64.deb
-      - run:
-          name: Setup Directory For Saving Test Results
-          command: mkdir -p ./reports/test_results/firefox
       - run: ./ci/browser_tests_firefox.sh
       - store_test_results:
-          path: ./reports/test_results/firefox
+          path: ./reports/tests
       - store_artifacts:
           path: ./reports/screenshots
 
