--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 gist_token = <token>
-account_passphrase = <passphrase>
-account_password = <password>
+account_passphrase = explain uniform adapt basic blue onion rebel pull rice erase volcano couple
+account_password = remix_is_cool
