--- a/package.json
+++ b/package.json
@@ -134,13 +134,13 @@
     "@ethereumjs/common": "^2.2.0",
     "@ethereumjs/tx": "^3.1.3",
     "@ethereumjs/vm": "^5.3.2",
-    "@remixproject/engine": "^0.3.16",
-    "@remixproject/engine-web": "^0.3.16",
-    "@remixproject/plugin": "^0.3.16",
-    "@remixproject/plugin-api": "^0.3.16",
-    "@remixproject/plugin-utils": "^0.3.16",
-    "@remixproject/plugin-webview": "^0.3.16",
-    "@remixproject/plugin-ws": "^0.3.16",
+    "@remixproject/engine": "^0.3.17",
+    "@remixproject/engine-web": "^0.3.17",
+    "@remixproject/plugin": "^0.3.17",
+    "@remixproject/plugin-api": "^0.3.17",
+    "@remixproject/plugin-utils": "^0.3.17",
+    "@remixproject/plugin-webview": "^0.3.17",
+    "@remixproject/plugin-ws": "^0.3.17",
     "ansi-gray": "^0.1.1",
     "async": "^2.6.2",
     "axios": ">=0.21.1",
@@ -154,9 +154,12 @@
     "ethereumjs-util": "^7.0.10",
     "ethers": "^5.1.4",
     "express-ws": "^4.0.0",
+    "file-saver": "^2.0.5",
+    "form-data": "^4.0.0",
     "fs-extra": "^3.0.1",
     "http-server": "^0.11.1",
     "isbinaryfile": "^3.0.2",
+    "isomorphic-git": "^1.8.2",
     "jquery": "^3.3.1",
     "jszip": "^3.6.0",
     "latest-version": "^5.1.0",
