--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,7 @@ jobs:
       - checkout
       - run: npm install
       - run: npx nx build remix-ide --with-deps
+      - run: npm run downloadsolc_assets
       - run: 
           name: Deploy
           command: |
@@ -291,6 +292,7 @@ jobs:
       - checkout
       - run: npm install
       - run: npx nx build remix-ide --with-deps
+      - run: npm run downloadsolc_assets
       - run: 
           name: Deploy
           command: |
@@ -319,6 +321,7 @@ jobs:
       - run: npm install
       - run: npm run build:libs
       - run: npm run build
+      - run: npm run downloadsolc_assets
       - run: 
           name: Deploy
           command: |
