--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,6 +268,7 @@ jobs:
       - setup_remote_docker
       - run: npm install
       - run: npx nx build remix-ide --with-deps
+      - run: npm run downloadsolc_assets
       - run: ./apps/remix-ide/ci/copy_resources.sh     
       - run: ./apps/remix-ide/ci/publishIpfs
       - run: ./apps/remix-ide/ci/build_and_publish_docker_images.sh
