--- a/libs/remix-analyzer/package.json
+++ b/libs/remix-analyzer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remix-project/remix-analyzer",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "description": "Tool to perform static analysis on Solidity smart contracts",
   "main": "index.js",
   "types": ".index.d.ts",
@@ -19,11 +19,15 @@
     }
   ],
   "dependencies": {
-    "@remix-project/remix-astwalker": "^0.0.26",
-    "@remix-project/remix-lib": "^0.4.34",
-    "@ethereumjs/vm": "^5.3.2",
     "@ethereumjs/block": "^3.2.1",
-    "@ethereumjs/tx": "^3.1.3"
+    "@ethereumjs/tx": "^3.1.3",
+    "@ethereumjs/vm": "^5.3.2",
+    "@remix-project/remix-astwalker": "^0.0.26",
+    "@remix-project/remix-lib": "^0.5.0",
+    "async": "^2.6.2",
+    "ethereumjs-util": "^7.0.10",
+    "ethers": "^5.1.4",
+    "web3": "1.2.4"
   },
   "publishConfig": {
     "access": "public"
@@ -46,5 +50,5 @@
     "typescript": "^3.7.5"
   },
   "typings": "index.d.ts",
-  "gitHead": "a0db8476e581f72690f735891fdf1282a97ec100"
+  "gitHead": "554e6e82fb0bf431bb22ca7d80558669e335ae01"
 }
