--- a/libs/remix-astwalker/package.json
+++ b/libs/remix-astwalker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remix-project/remix-astwalker",
-  "version": "0.0.29",
+  "version": "0.0.30",
   "description": "Tool to walk through Solidity AST",
   "main": "index.js",
   "scripts": {
@@ -34,19 +34,23 @@
     ]
   },
   "dependencies": {
-    "@remix-project/remix-lib": "^0.4.34",
-    "@types/tape": "^4.2.33",
-    "@ethereumjs/vm": "^5.3.2",
     "@ethereumjs/block": "^3.2.1",
     "@ethereumjs/tx": "^3.1.3",
+    "@ethereumjs/vm": "^5.3.2",
+    "@remix-project/remix-lib": "^0.5.0",
+    "@types/tape": "^4.2.33",
+    "async": "^2.6.2",
+    "ethereumjs-util": "^7.0.10",
+    "ethers": "^5.1.4",
     "nyc": "^13.3.0",
     "tape": "^4.10.1",
     "ts-node": "^8.0.3",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.3",
+    "web3": "1.2.4"
   },
   "devDependencies": {
     "tap-spec": "^5.0.0"
   },
   "typings": "index.d.ts",
-  "gitHead": "a0db8476e581f72690f735891fdf1282a97ec100"
+  "gitHead": "554e6e82fb0bf431bb22ca7d80558669e335ae01"
 }
