--- a/libs/remix-debug/package.json
+++ b/libs/remix-debug/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remix-project/remix-debug",
-  "version": "0.4.10",
+  "version": "0.5.0",
   "description": "Tool to debug Ethereum transactions",
   "contributors": [
     {
@@ -18,13 +18,17 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "@remix-project/remix-astwalker": "^0.0.26",
-    "@remix-project/remix-lib": "^0.4.34",
-    "commander": "^2.19.0",
-    "@ethereumjs/vm": "^5.3.2",
     "@ethereumjs/block": "^3.2.1",
+    "@ethereumjs/common": "^2.2.0",
     "@ethereumjs/tx": "^3.1.3",
+    "@ethereumjs/vm": "^5.3.2",
+    "@remix-project/remix-astwalker": "^0.0.26",
+    "@remix-project/remix-lib": "^0.5.0",
+    "async": "^2.6.2",
+    "commander": "^2.19.0",
+    "deep-equal": "^1.0.1",
     "ethereumjs-util": "^7.0.10",
+    "ethers": "^5.1.4",
     "web3": "^1.2.4"
   },
   "devDependencies": {
@@ -56,5 +60,5 @@
   },
   "homepage": "https://github.com/ethereum/remix-project/tree/master/libs/remix-debug#readme",
   "typings": "src/index.d.ts",
-  "gitHead": "a0db8476e581f72690f735891fdf1282a97ec100"
+  "gitHead": "554e6e82fb0bf431bb22ca7d80558669e335ae01"
 }
