--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "react-dom": "16.13.1",
     "selenium": "^2.20.0",
     "signale": "^1.4.0",
+    "string-similarity": "^4.0.4",
     "time-stamp": "^2.2.0",
     "tslib": "^2.3.0",
     "web3": "1.2.4",
