Moved existing code to new branch

--- a/nx.json
+++ b/nx.json
@@ -107,6 +107,12 @@
     },
     "remix-core-plugin": {
       "tags": []
+    },
+    "remix-ui-solidity-compiler": {
+      "tags": []
+    },
+    "remix-ui-publish-to-storage": {
+      "tags": []
     }
   }
 }
