rm registry from compiler files
add core plugins

mv content imports and compiler artefacts

mv utils

mv compiler helpers

mv compiler abstract

rm compiler input

mv all to solidity

mv fetch and compile

fixed imports

mv offset line converter

url resolver fix

await calls

packages

package location

versions

func can be undefined

window can be undefined

settings dependency for contentimport

undefined window

--- a/nx.json
+++ b/nx.json
@@ -101,6 +101,19 @@
     },
     "remix-ui-checkbox": {
       "tags": []
+    },
+    "compiler-artefacts": {
+      "tags": [],
+      "implicitDependencies": ["remix-lib"]
+    },
+    "compiler-fetch-and-compile": {
+      "tags": []
+    },
+    "compiler-content-imports": {
+      "tags": []
+    },
+    "offset-line-to-column-converter": {
+      "tags": []
     }
   }
 }
