--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,19 @@
       "@remix-ui/file-explorer": ["libs/remix-ui/file-explorer/src/index.ts"],
       "@remix-ui/workspace": ["libs/remix-ui/workspace/src/index.ts"],
       "@remix-ui/static-analyser": ["libs/remix-ui/static-analyser/src/index.ts"],
-      "@remix-ui/checkbox": ["libs/remix-ui/checkbox/src/index.ts"]
+      "@remix-ui/checkbox": ["libs/remix-ui/checkbox/src/index.ts"],
+      "@remix-core-plugin/compiler-artefacts": [
+        "libs/remix-core-plugin/compiler-artefacts/src/index.ts"
+      ],
+      "@remix-core-plugin/compiler-fetch-and-compile": [
+        "libs/remix-core-plugin/compiler-fetch-and-compile/src/index.ts"
+      ],
+      "@remix-core-plugin/compiler-content-imports": [
+        "libs/remix-core-plugin/compiler-content-imports/src/index.ts"
+      ],
+      "@remix-core-plugin/offset-line-to-column-converter": [
+        "libs/remix-core-plugin/offset-line-to-column-converter/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
