Made error renderer a react library

--- a/nx.json
+++ b/nx.json
@@ -113,6 +113,9 @@
     },
     "remix-ui-publish-to-storage": {
       "tags": []
+    },
+    "remix-ui-renderer": {
+      "tags": []
     }
   }
 }
