tslib added as a dependency

--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "selenium": "^2.20.0",
     "signale": "^1.4.0",
     "time-stamp": "^2.2.0",
+    "tslib": "^2.3.0",
     "web3": "1.2.4",
     "winston": "^3.3.3",
     "ws": "^7.3.0"
