--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lint:libs": "nx run-many --target=lint --projects=remix-analyzer,remix-astwalker,remix-debug,remix-lib,remix-simulator,remix-solidity,remix-tests,remix-url-resolver,remixd,remix-ui-tree-view,remix-ui-modal-dialog,remix-ui-toaster,remix-ui-file-explorer,remix-ui-debugger-ui,remix-ui-workspace,remix-ui-static-analyser,remix-ui-checkbox",
     "build:libs": "nx run-many --target=build --parallel=false --with-deps=true --projects=remix-analyzer,remix-astwalker,remix-debug,remix-lib,remix-simulator,remix-solidity,remix-tests,remix-url-resolver,remixd",
     "test:libs": "nx run-many --target=test --projects=remix-analyzer,remix-astwalker,remix-debug,remix-lib,remix-simulator,remix-solidity,remix-tests,remix-url-resolver,remixd",
-    "publish:libs": "npm run build:libs & lerna publish --skip-git & npm run bumpVersion:libs",
+    "publish:libs": "npm run build:libs && lerna publish --skip-git && npm run bumpVersion:libs",
     "build:e2e": "tsc -p apps/remix-ide-e2e/tsconfig.e2e.json",
     "watch:e2e": "nodemon",
     "bumpVersion:libs": "gulp & gulp syncLibVersions;",
