--- a/nx.json
+++ b/nx.json
@@ -104,7 +104,7 @@
     },
     "compiler-artefacts": {
       "tags": [],
-      "implicitDependencies": ["remix-lib"]
+      "implicitDependencies": ["remix-lib", "remix-solidity"]
     },
     "compiler-fetch-and-compile": {
       "tags": []
