feat: task configuration and creating of setting-tab in react (#1171)
initial project setup and creation of setting tab in react
Fixes https://github.com/ethereum/remix-project/issues/1159

--- a/nx.json
+++ b/nx.json
@@ -96,13 +96,16 @@
     "remix-ui-workspace": {
       "tags": []
     },
+    "remix-ui-settings": {
+       "tags": []
+    },
     "remix-ui-static-analyser": {
       "tags": []
     },
     "remix-ui-checkbox": {
       "tags": []
     },
-    "remix-ui-plugin-manager": {
+    "remix-ui-settings": {
       "tags": []
     }
   }
