--- a/nx.json
+++ b/nx.json
@@ -96,10 +96,16 @@
     "remix-ui-workspace": {
       "tags": []
     },
+    "remix-ui-settings": {
+       "tags": []
+    },
     "remix-ui-static-analyser": {
       "tags": []
     },
     "remix-ui-checkbox": {
+      "tags": []
+    },
+    "remix-ui-settings": {
       "tags": []
     }
   }
