--- a/nx.json
+++ b/nx.json
@@ -105,7 +105,7 @@
     "remix-ui-checkbox": {
       "tags": []
     },
-    "remix-ui-settings": {
+    "remix-ui-plugin-manager": {
       "tags": []
     }
   }
