--- a/libs/remix-analyzer/package.json
+++ b/libs/remix-analyzer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remix-project/remix-analyzer",
-  "version": "0.5.11",
+  "version": "0.5.12",
   "description": "Tool to perform static analysis on Solidity smart contracts",
   "main": "index.js",
   "types": ".index.d.ts",
@@ -23,10 +23,11 @@
     "@ethereumjs/tx": "^3.2.1",
     "@ethereumjs/vm": "^5.4.1",
     "@remix-project/remix-astwalker": "^0.0.26",
-    "@remix-project/remix-lib": "^0.5.2",
+    "@remix-project/remix-lib": "^0.5.3",
     "async": "^2.6.2",
     "ethereumjs-util": "^7.0.10",
     "ethers": "^5.1.4",
+    "string-similarity": "^4.0.4",
     "web3": "1.2.4"
   },
   "publishConfig": {
@@ -50,5 +51,5 @@
     "typescript": "^3.7.5"
   },
   "typings": "index.d.ts",
-  "gitHead": "50b32cc20d2d4dcc793bf7de955957e073e5b5b8"
+  "gitHead": "5e91f3010a7198f1b2d90cc7796bda750c58f1ea"
 }
