--- a/libs/remix-simulator/package.json
+++ b/libs/remix-simulator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remix-project/remix-simulator",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Ethereum IDE and tools for the web",
   "contributors": [
     {
@@ -18,7 +18,7 @@
     "@ethereumjs/common": "^2.2.0",
     "@ethereumjs/tx": "^3.2.1",
     "@ethereumjs/vm": "^5.4.1",
-    "@remix-project/remix-lib": "^0.5.2",
+    "@remix-project/remix-lib": "^0.5.3",
     "ansi-gray": "^0.1.1",
     "async": "^3.1.0",
     "body-parser": "^1.18.2",
@@ -30,6 +30,7 @@
     "express": "^4.16.3",
     "express-ws": "^4.0.0",
     "merge": "^1.2.0",
+    "string-similarity": "^4.0.4",
     "time-stamp": "^2.0.0",
     "web3": "^1.2.4"
   },
@@ -65,5 +66,5 @@
   },
   "homepage": "https://github.com/ethereum/remix-project/tree/master/libs/remix-simulator#readme",
   "typings": "src/index.d.ts",
-  "gitHead": "50b32cc20d2d4dcc793bf7de955957e073e5b5b8"
+  "gitHead": "5e91f3010a7198f1b2d90cc7796bda750c58f1ea"
 }
