--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remix-project",
-  "version": "0.17.0-dev",
+  "version": "0.16.1",
   "license": "MIT",
   "description": "Ethereum Remix Monorepo",
   "keywords": [
