--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,14 +38,11 @@
       "@remix-ui/static-analyser": ["libs/remix-ui/static-analyser/src/index.ts"],
       "@remix-ui/checkbox": ["libs/remix-ui/checkbox/src/index.ts"],
       "@remix-ui/settings": ["libs/remix-ui/settings/src/index.ts"],
-      "@remix-ui/plugin-manager": ["libs/remix-ui/plugin-manager/src/index.ts"]
-<<<<<<< HEAD
-=======
+      "@remix-ui/plugin-manager": ["libs/remix-ui/plugin-manager/src/index.ts"],
       "@remix-project/core-plugin": ["libs/remix-core-plugin/src/index.ts"],
       "@remix-ui/solidity-compiler": ["libs/remix-ui/solidity-compiler/src/index.ts"],
       "@remix-ui/publish-to-storage": ["libs/remix-ui/publish-to-storage/src/index.ts"],
       "@remix-ui/renderer": ["libs/remix-ui/renderer/src/index.ts"]
->>>>>>> 1f46c590a942e56f8e46ab4fa3b074d450d5ffc8
     }
   },
   "exclude": ["node_modules", "tmp"]
