--- a/libs/remix-astwalker/package.json
+++ b/libs/remix-astwalker/package.json
@@ -47,7 +47,7 @@
     "tape": "^4.10.1",
     "ts-node": "^8.0.3",
     "typescript": "^3.4.3",
-    "web3": "1.2.4"
+    "web3": "^1.5.1"
   },
   "devDependencies": {
     "tap-spec": "^5.0.0"
