--- a/libs/remix-solidity/package.json
+++ b/libs/remix-solidity/package.json
@@ -25,7 +25,7 @@
     "ethers": "^5.4.2",
     "solc": "^0.7.4",
     "string-similarity": "^4.0.4",
-    "web3": "1.2.4",
+    "web3": "^1.5.1",
     "webworkify-webpack": "^2.1.5"
   },
   "devDependencies": {
