Setup tsconfig.base.json

--- a/nx.json
+++ b/nx.json
@@ -6,8 +6,9 @@
       "dependencies": "*",
       "devDependencies": "*"
     },
-    "tsconfig.json": "*",
+    "tsconfig.base.json": "*",
     "tslint.json": "*",
+    ".eslintrc": "*",
     "nx.json": "*"
   },
   "tasksRunnerOptions": {
