--- a/libs/remix-ui/plugin-manager/tsconfig.json
+++ b/libs/remix-ui/plugin-manager/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react",
     "allowJs": true,
@@ -12,6 +12,9 @@
   "references": [
     {
       "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
   ]
 }
