--- a/libs/remix-ui/plugin-manager/tsconfig.lib.json
+++ b/libs/remix-ui/plugin-manager/tsconfig.lib.json
@@ -1,18 +1,14 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "jsx": "react",
-    "composite": true,
     "outDir": "../../../dist/out-tsc",
+    "composite": true,
     "types": ["node"]
   },
-  "files": [],
-  "composite": true,
+  "files": [
+    "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
+    "../../node_modules/@nrwl/react/typings/image.d.ts"
+  ],
   "exclude": ["**/*.spec.ts", "**/*.spec.tsx"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"],
-  "references": [
-    {
-      "path": "./tsconfig.lib.json"
-    }
-  ]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
 }
